@@ -136,6 +136,9 @@
 	define("TRIGGER_VALUE_TRUE",1);
 	define("TRIGGER_VALUE_UNKNOWN",2);
 
+	define("ACTION_STATUS_ENABLED",0);
+	define("ACTION_STATUS_DISABLED",1);
+
 	define("TRIGGER_STATUS_ENABLED",0);
 	define("TRIGGER_STATUS_DISABLED",1);
 	define("TRIGGER_STATUS_UNKNOWN",2);
